2009-10-02  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/476.s: New test.
	* gas/ppc/476.d: Likewise.
	* gas/ppc/ppc.exp: Run the 476 test.

2009-10-01  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/a2.d: Rename "ppca2" to "a2".

2009-09-29  DJ Delorie  <dj@redhat.com>

	* gas/rx: New directory.
	* gas/rx/*: New set of test cases.
	* gas/elf/section2.e-rx: New expected output file.
	* gas/all/gas.exp: Add support for RX target.
	* gas/elf/elf.exp: Likewise.
	* gas/lns/lns.exp: Likewise.
	* gas/macros/macros.exp: Likewise.

2009-09-29  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/vsx.s ("lxsdux", "lxvd2ux", "lxvw4ux", "stxsdux", 
	"stxvd2ux", "stxvw4ux"): Remove tests.
	* gas/ppc/vsx.d: Likewise.
	* gas/ppc/power7.s: Likewise.
	* gas/ppc/power7.d: Likewise.

2009-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10677
	* gas/i386/i386.exp: Run x86-64-localpic.

	* gas/i386/x86-64-localpic.d: New.
	* gas/i386/x86-64-localpic.s: Likewise.

2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/localpic.d: Updated.

2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run localpic.

	* gas/i386/localpic.d: New.
	* gas/i386/localpic.s: Likewise.

2009-09-23  Alan Modra  <amodra@bigpond.net.au>

	* gas/arm/thumbver.d: Tolerate some whitespace differences.
	* gas/elf/elf.exp: Likewise.
	* gas/elf/section2.e: Likewise.
	* gas/elf/section2.e-armeabi: Likewise.
	* gas/elf/section2.e-armelf: Likewise.
	* gas/elf/section2.e-m32r: Likewise.
	* gas/elf/section2.e-mips: Likewise.
	* gas/elf/section2.e-miwmmxt: Likewise.
	* gas/elf/section2.e-score: Likewise.
	* gas/elf/section2.e-xtensa: Likewise.
	* gas/elf/type-noifunc.e: Likewise.
	* gas/elf/type.e: Likewise.
	* gas/ia64/alias-ilp32.d: Likewise.
	* gas/ia64/alias.d: Likewise.
	* gas/ia64/global.d: Likewise.
	* gas/mips/mips16-vis-1.d: Likewise.
	* gas/mmix/bspec-1.d: Likewise.
	* gas/mmix/byte-1.d: Likewise.
	* gas/mmix/comment-1.d: Likewise.
	* gas/mmix/loc-1.d: Likewise.