@@ -216,5 +216,7 @@ start:
 	call	dword ptr xtrn
 	jmp	word ptr xtrn
 
-	# Force a good alignment.
-	.p2align	4,0
+.L11:
+        jmp     DWORD PTR[ .L11  + eax * 4 ]
+.LC0:
+        lea     eax, DWORD PTR[ .LC0@GOTOFF + ebx ]
